Details
-
Bug
-
Status: Closed
-
Major
-
Resolution: Fixed
-
None
-
Patch Available
Description
Given the code
struct test {
1: byte field
}
the C# Generator generates
public partial class test : TBase { private byte _field; // more code }
which is wrong, as all Thrift integer types are considered signed.
Attachments
Attachments
Issue Links
- relates to
-
THRIFT-1901 C#: Support for Multiplexing Services on any Transport, Protocol and Server
-
- Closed
-
-
THRIFT-1945 C#: sbyte breaks TestClient
-
- Closed
-