THRIFT-1930: C# generates unsigned byte for Thrift "byte" type

Patch: Jens Geyer